fixed spacings and adjusted text size

--- a/css/style.css
+++ b/css/style.css
@@ -88,18 +88,27 @@ p {
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
   color: var(--grey-text-color);
   font-size: 1em;
   padding-left: 25px;
 }
 
 .subtext {
+  font-size: 14px;
+  color: #B4B4B5;
+}
+
+.secondary-header {
   font-size: 1.25em;
 }
 
 .row {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .margin-bottom {
@@ -122,11 +131,11 @@ p {
   }
 
   .nav-item {
-    font-size: 1.25em;
+    font-size: 1.15em;
   }
 
   .nav-margin {
-    margin-right: 25px;
+    margin-right: 15px;
   }
 
   .container {
